removed legacy named color for groups